src/test/ui/manually_drop_attr/feature-gate-manually_drop_attr.stderr
error[E0658]: the `#[manually_drop]` attribute is an experimental feature
  --> $DIR/feature-gate-manually_drop_attr.rs:1:1
   |
LL | #[manually_drop]
   | ^^^^^^^^^^^^^^^^
   |
   = note: see issue #100344 <https://github.com/rust-lang/rust/issues/100344> for more information
   = help: add `#![feature(manually_drop_attr)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
