src/test/ui/manually_drop_attr/feature-gate-manually_drop_attr.rs
#[manually_drop]
//~^ ERROR the `#[manually_drop]` attribute is an experimental feature
struct Foo {}

fn main() {}
